featured testimonial image overflow fix

--- a/src/css/scss/components/custom/_featured-testimonial.scss
+++ b/src/css/scss/components/custom/_featured-testimonial.scss
@@ -24,7 +24,7 @@
         video {
             object-fit: cover;
             width: 100%;
-            height: 100%;
+            height: 100% !important;
         }
 
         .video-control {
